BitBean (1.0.0.0) stable; urgency=high

  [ Nokat ]
  * Initial release.

 -- Nokat <balthazar@yandex.ru>  Friday, 13 Feb 2015 00:00:00 +0000

BitBean (1.1.0.0RC) stable; urgency=high

   [Bean Core]
   *Update release.

-- Bean Core <www.bitbean.org>

Beancash (1.1.2.2RC) stable; urgency=high

   [Bean Core]
   *Rebrand release.

Bean Cash (1.3.0.0RC) stable; urgency=high

   [Bean Core]
   *Major update
   *Extensive fixes & updates (When GA, extensive list will be updated here.)

-- Bean Core <support@beancash.org>  Thursday, 18 March 2021 00:00:00 +0000
